# Prog2

CLASE3/: CMakeLists.txt  main.cpp
CLASE3/scr/: AuxiliaryFunctions.cpp  AuxiliaryFunctions.hpp  Overloads.cpp  Overloads.hpp  Review.hpp  Reviews.hpp  Utils.hpp
Clase SobreCargas/Ejercio_SobreCargas/: CMakeLists.txt  Estructuras.hpp  Funciones.cpp  Funciones.hpp  Reporte.txt  SobreCargas.cpp  SobreCargas.hpp  main.cpp  papeletas.csv  utils.hpp
Clase SobreCargas/SobreCargas/: CMakeLists.txt  Persona.hpp  SobreCargas.cpp  SobreCargas.hpp  Utils.h  main.cpp
ClaseDeIntroduccion/: CMakeLists.txt  main.cpp
ClaseDeIntroduccion/Funciones/: Funcions.cpp  Funcions.hpp  Utils.hpp
ClaseDePunteroAFuncion/: CMakeLists.txt  main.cpp
ClaseDePunteroAFuncion/src/: Funciones.cpp  Funciones.hpp  FuncionesGenericas.cpp  FuncionesGenericas.hpp  Utils.hpp
ClaseRepasoMemoria/: CMakeLists.txt  main.cpp
ClaseRepasoMemoria/src/: Functions.cpp  Utils.hpp  (+1 more)
EntendiendoPOO_FirstTime/: CMakeLists.txt  main.cpp
Lab01_2024_1/UnaAplicacionConBibliotecaEstatica/: CMakeLists.txt  main.cpp
Lab01_2024_1/UnaAplicacionConBibliotecaEstatica/src/: AuxiliaryFuctions.cpp  AuxiliaryFuctions.hpp
Lab01_2025_1/: CMakeLists.txt  Estructuras.hpp  Funciones.cpp  Funciones.hpp  Utils.hpp  main.cpp  sobreCargas.cpp  sobreCargas.hpp
Lab01_2025_1_4Proyectos/ProyectoPrincipal/: CMakeLists.txt  main.cpp
Lab01_2025_1_4Proyectos/ProyectoPrincipal/src/: AuxiliaryFunctions.cpp  AuxiliaryFunctions.hpp  Utils.hpp
Lab02_2025_1/: CMakeLists.txt  Estructuras.hpp  SobreCargas.cpp  SobreCargas.hpp  Utils.hpp  main.cpp
Lab02_2025_1_Version2.0/: CMakeLists.txt  main.cpp
Lab02_2025_1_Version2.0/src/: Functions.cpp  Functions.hpp  Overloads.cpp  Overloads.hpp  Utils.hpp
Lab02_2025_1_Version2.0/struct/: Structs.hpp
Lab03_2025_1/: CMakeLists.txt  main.cpp
Lab04_2023_2/: CMakeLists.txt  main.cpp
Lab04_2025_1/: CMakeLists.txt  main.cpp
Lab04_2025_1/src/: BibliotecaEnteros.cpp  BibliotecaEnteros.hpp  BibliotecaGenerica.cpp  BibliotecaGenerica.hpp  BibliotecaRegistro.cpp  BibliotecaRegistro.hpp  Utils.hpp
Lab05_2025_2/: CMakeLists.txt  main.cpp
Lab05_2025_2/src/: BibliotecaConductores.cpp  BibliotecaConductores.hpp  BibliotecaGenerica.cpp  BibliotecaGenerica.hpp  BibliotecaInfracciones.cpp  BibliotecaInfracciones.hpp  Utils.hpp
MemoriaDinamicaExacta/: CMakeLists.txt  Funciones.cpp  Funciones.hpp  Utils.hpp  main.cpp
MemoriaDinamicaIncremento/: CMakeLists.txt  Funciones.cpp  Funciones.hpp  main.cpp  utils.hpp
PracticandoPunteroVoid/: CMakeLists.txt  main.cpp
RepasandoMemoriaDinamica/: CMakeLists.txt  main.cpp
RepasandoMemoriaExacta/: CMakeLists.txt  main.cpp
RepasandoMemoriaExacta/src/: Functions.cpp  Functions.hpp  HandleTweets.cpp  HandleTweets.hpp  Utils.hpp
RepasandoMemoriaExacta/structs/: Structs.hpp
cositas/: CMakeLists.txt  main.cpp
(+43 files in other folders)
